CSS cleanup and modified Add Activity placeholders to prevent text-overrun on iOS.

--- a/app/webroot/css/less/style.less
+++ b/app/webroot/css/less/style.less
@@ -322,7 +322,6 @@ article.badge {
       
       span {
         color: #fff;
-        color: rgba(255,255,255, 0.9); 
         #hl.text-shadow(0, 1px, 0, @dark_purple);
       }        
     } 
@@ -390,6 +389,7 @@ article.badge {
       input {
         padding: 8px 10%;
         width: 80%;
+        text-align: center;
       }
     }
     
